# sqfa

./: .gitignore  README.md  pyproject.toml
.github/workflows/: install.yml  lint.yml  publish-to-pypi.yml  tests.yml
docs/source/: api.md  conf.py  index.md
docs/source/tutorials/: digit_processing.md  distances.md  spd_geometry.md  toy_problem.md
src/sqfa/: __init__.py  _optim.py  constrains.py  distances.py  linalg.py  linalg_utils.py  model.py  statistics.py
src/sqfa/plot/: __init__.py  _data_wrangle.py  colors.py  data.py  ellipses.py
tests/: make_examples.py  test_distances.py  test_linalg.py  test_plotting.py  test_statistics.py  test_training.py
