[project]
name = "sqfa"
requires-python = ">= 3.7"
dynamic = ["version"]
authors = [
  {name = "Daniel Herrera-Esposito", email = "dherrera1911@gmail.com"}
]
description = "Supervised Quadratic Feature Analysis: Task specific second order feature extraction"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
  "numpy>=1.1",
  "torch>=1.8",
  "matplotlib",
  "tqdm>=4.29",
]
keywords = ['covariance matrices', 'second moments', 'dimensionality reduction', 'machine learning', 'manifold', 'pytorch', 'information geometry']


[project.optional-dependencies]
dev = [
    "pytest>=5.1.2",
    'pytest-cov',
    'pytest-xdist']

# Copied from plenoptic
docs = [
     'sphinx',
     'myst-nb',
     # fix sphinx 7 incompatibility issue
     'sphinx_rtd_theme>=1.3.0rc1',
     'numpydoc',
     'nbsphinx',
     'nbsphinx_link',
     'sphinxcontrib-apidoc',
     'sphinx-autodoc-typehints',
     # because of this issue:
     # https://nbsphinx.readthedocs.io/en/0.6.0/installation.html#Pygments-Lexer-for-Syntax-Highlighting
     'ipython',
     'sphinx-copybutton',
     'sphinxemoji',
     'sphinx-inline-tabs',
     'docutils>=0.18.1,<0.21',
     'torchvision',
     'scikit-learn',
]

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"


[project.urls]
Repository = "https://github.com/dherrera1911/sqfa"


[tool.pytest.ini_options]
addopts = "--cov=sqfa --cov-report term-missing -n auto"
testpaths = ["tests"]


[tool.setuptools.packages.find]
where = ["src"]


#[tool.setuptools]
#include-package-data = true
#
#
#[tool.setuptools.package-data]
#amatorch = ["datasets/disparity/*.csv"]


[tool.setuptools_scm]
write_to = "src/sqfa/version.py"
version_scheme = 'python-simplified-semver'
local_scheme = 'no-local-version'


[tool.ruff]
extend-include = ["*.ipynb"]
src = ["src", "tests"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs",
    ]

# Set the maximum line length (same as Black)
line-length = 88

indent-width = 4 # same as Black


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes: basic static analzsis for common errors like undefined names
    # and missing imports.
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "D",
]
ignore = ["SIM105", "D205", "E501"]


[tool.ruff.lint.pydocstyle]
convention = "numpy"
